# gazelle_cc

./: MODULE.bazel
language/internal/cc/lexer/: BUILD.bazel  lexer.go  lexer_test.go  scanner.go  scanner_test.go  token.go
patches/: tree-sitter-cpp.patch
