"""Bazel Gazelle extension for rules_cc"""

module(
    name = "gazelle_cc",
)

bazel_dep(name = "gazelle", version = "0.45.0")

# The following deps are using the same versions as upstream gazelle
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "package_metadata", version = "0.0.5")

bazel_dep(name = "rules_cc", version = "0.2.8")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "tree-sitter",
    url = "https://github.com/tree-sitter/tree-sitter/archive/refs/tags/v0.25.9.tar.gz",
    strip_prefix = "tree-sitter-0.25.9",
    sha256 = "024a2478579acebbb8882d7c2c0f0e07fc0aa19a459b48d10469e4abb96cf16e",
    build_file = "@gazelle_cc//patches:tree-sitter.BUILD",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module_override(
    path = "github.com/tree-sitter/tree-sitter-cpp",
    patches = ["@gazelle_cc//patches:tree-sitter-cpp.patch"],
)
use_repo(
    go_deps,
    "com_github_bmatcuk_doublestar_v4",
    "com_github_stretchr_testify",
    "org_golang_google_protobuf",
    "com_github_tree_sitter_tree_sitter_cpp",
)
