load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lexer",
    srcs = [
        "scanner.go",
        "token.go",
    ],
    importpath = "github.com/EngFlow/gazelle_cc/language/internal/cc/lexer",
)

go_test(
    name = "lexer_test",
    srcs = [
        "scanner_test.go",
    ],
    embed = [":lexer"],
    deps = ["@com_github_stretchr_testify//assert"],
)
